# Scarabaeus

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: python-package.yml
examples/: example_advanced_app.py  example_events.py  example_simple_app.py
examples/plugins/: example_plugin.py
scarabaeus/: __init__.py
tests/: main.py  plugins.py
tests/test_addons/: test_addon_1.py  test_addon_2.py
